src/ref/raylib.h

    typedef enum bool { false, true } bool;
typedef struct Vector2 {
    float x;                
    float y;                
} Vector2;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Color {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} Color;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef Texture Texture2D;
typedef RenderTexture RenderTexture2D;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int projection;         
} Camera3D;
typedef Camera3D Camera;    
typedef struct Camera2D {
    Vector2 offset;         
    Vector2 target;         
    float rotation;         
    float zoom;             
} Camera2D;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct AudioStream {
    rAudioBuffer *buffer;       
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
} AudioStream;
typedef struct VrDeviceInfo {
    int hResolution;                
    int vResolution;                
    float hScreenSize;              
    float vScreenSize;              
    float vScreenCenter;            
    float eyeToScreenDistance;      
    float lensSeparationDistance;   
    float interpupillaryDistance;   
    float lensDistortionValues[4];  
    float chromaAbCorrection[4];    
} VrDeviceInfo;
typedef struct VrStereoConfig {
    Matrix projection[2];           
    Matrix viewOffset[2];           
    float leftLensCenter[2];        
    float rightLensCenter[2];       
    float leftScreenCenter[2];      
    float rightScreenCenter[2];     
    float scale[2];                 
    float scaleIn[2];               
} VrStereoConfig;
typedef void (*TraceLogCallback)(int logLevel, const char *text, va_list args);  
typedef unsigned char *(*LoadFileDataCallback)(const char *fileName, unsigned int *bytesRead);      
typedef bool (*SaveFileDataCallback)(const char *fileName, void *data, unsigned int bytesToWrite);  
typedef char *(*LoadFileTextCallback)(const char *fileName);       
typedef bool (*SaveFileTextCallback)(const char *fileName, char *text);     
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI bool WindowShouldClose(void);                               
RLAPI void CloseWindow(void);                                     
RLAPI bool IsWindowReady(void);                                   
RLAPI bool IsWindowFullscreen(void);                              
RLAPI bool IsWindowHidden(void);                                  
RLAPI bool IsWindowMinimized(void);                               
RLAPI bool IsWindowMaximized(void);                               
RLAPI bool IsWindowResized(void);                                 
RLAPI bool IsWindowState(unsigned int flag);                      
RLAPI void SetWindowState(unsigned int flags);                    
RLAPI void ClearWindowState(unsigned int flags);                  
RLAPI void ToggleFullscreen(void);                                
RLAPI void MaximizeWindow(void);                                  
RLAPI void MinimizeWindow(void);                                  
RLAPI void RestoreWindow(void);                                   
RLAPI void SetWindowIcon(Image image);                            
RLAPI void SetWindowTitle(const char *title);                     
RLAPI void SetWindowPosition(int x, int y);                       
RLAPI void SetWindowMonitor(int monitor);                         
RLAPI void SetWindowMinSize(int width, int height);               
RLAPI void SetWindowSize(int width, int height);                  
RLAPI void *GetWindowHandle(void);                                
RLAPI int GetScreenWidth(void);                                   
RLAPI int GetScreenHeight(void);                                  
RLAPI int GetMonitorCount(void);                                  
RLAPI int GetCurrentMonitor(void);                                
RLAPI Vector2 GetMonitorPosition(int monitor);                    
RLAPI int GetMonitorWidth(int monitor);                           
RLAPI int GetMonitorHeight(int monitor);                          
RLAPI int GetMonitorPhysicalWidth(int monitor);                   
RLAPI int GetMonitorPhysicalHeight(int monitor);                  
RLAPI int GetMonitorRefreshRate(int monitor);                     
RLAPI Vector2 GetWindowPosition(void);                            
RLAPI Vector2 GetWindowScaleDPI(void);                            
RLAPI const char *GetMonitorName(int monitor);                    
RLAPI void SetClipboardText(const char *text);                    
RLAPI const char *GetClipboardText(void);                         
RLAPI void SwapScreenBuffer(void);                                
RLAPI void PollInputEvents(void);                                 
RLAPI void WaitTime(float ms);                                    
RLAPI void ShowCursor(void);                                      
RLAPI void HideCursor(void);                                      
RLAPI bool IsCursorHidden(void);                                  
RLAPI void EnableCursor(void);                                    
RLAPI void DisableCursor(void);                                   
RLAPI bool IsCursorOnScreen(void);                                
RLAPI void ClearBackground(Color color);                          
RLAPI void BeginDrawing(void);                                    
RLAPI void EndDrawing(void);                                      
RLAPI void BeginMode2D(Camera2D camera);                          
RLAPI void EndMode2D(void);                                       
RLAPI void BeginMode3D(Camera3D camera);                          
RLAPI void EndMode3D(void);                                       
RLAPI void BeginTextureMode(RenderTexture2D target);              
RLAPI void EndTextureMode(void);                                  
RLAPI void BeginShaderMode(Shader shader);                        
RLAPI void EndShaderMode(void);                                   
RLAPI void BeginBlendMode(int mode);                              
RLAPI void EndBlendMode(void);                                    
RLAPI void BeginScissorMode(int x, int y, int width, int height); 
RLAPI void EndScissorMode(void);                                  
RLAPI VrStereoConfig LoadVrStereoConfig(VrDeviceInfo device);     
RLAPI void UnloadVrStereoConfig(VrStereoConfig config);           
RLAPI Shader LoadShader(const char *vsFileName, const char *fsFileName);   
RLAPI Shader LoadShaderFromMemory(const char *vsCode, const char *fsCode); 
RLAPI int GetShaderLocation(Shader shader, const char *uniformName);       
RLAPI int GetShaderLocationAttrib(Shader shader, const char *attribName);  
RLAPI void SetShaderValue(Shader shader, int locIndex, const void *value, int uniformType);               
RLAPI void SetShaderValueV(Shader shader, int locIndex, const void *value, int uniformType, int count);   
RLAPI void SetShaderValueMatrix(Shader shader, int locIndex, Matrix mat);         
RLAPI void SetShaderValueTexture(Shader shader, int locIndex, Texture2D texture); 
RLAPI void UnloadShader(Shader shader);                                    
RLAPI Ray GetMouseRay(Vector2 mousePosition, Camera camera);      
RLAPI Matrix GetCameraMatrix(Camera camera);                      
RLAPI Matrix GetCameraMatrix2D(Camera2D camera);                  
RLAPI Vector2 GetWorldToScreen(Vector3 position, Camera camera);  
RLAPI Vector2 GetWorldToScreenEx(Vector3 position, Camera camera, int width, int height); 
RLAPI Vector2 GetWorldToScreen2D(Vector2 position, Camera2D camera); 
RLAPI Vector2 GetScreenToWorld2D(Vector2 position, Camera2D camera); 
RLAPI void SetTargetFPS(int fps);                                 
RLAPI int GetFPS(void);                                           
RLAPI float GetFrameTime(void);                                   
RLAPI double GetTime(void);                                       
RLAPI int GetRandomValue(int min, int max);                       
RLAPI void SetRandomSeed(unsigned int seed);                      
RLAPI void TakeScreenshot(const char *fileName);                  
RLAPI void SetConfigFlags(unsigned int flags);                    
RLAPI void TraceLog(int logLevel, const char *text, ...);         
RLAPI void SetTraceLogLevel(int logLevel);                        
RLAPI void *MemAlloc(int size);                                   
RLAPI void *MemRealloc(void *ptr, int size);                      
RLAPI void MemFree(void *ptr);                                    
RLAPI void SetTraceLogCallback(TraceLogCallback callback);         
RLAPI void SetLoadFileDataCallback(LoadFileDataCallback callback); 
RLAPI void SetSaveFileDataCallback(SaveFileDataCallback callback); 
RLAPI void SetLoadFileTextCallback(LoadFileTextCallback callback); 
RLAPI void SetSaveFileTextCallback(SaveFileTextCallback callback); 
RLAPI AudioStream LoadAudioStream(unsigned int sampleRate, unsigned int sampleSize, unsigned int channels); 
RLAPI void UnloadAudioStream(AudioStream stream);                      
RLAPI void UpdateAudioStream(AudioStream stream, const void *data, int frameCount); 
RLAPI bool IsAudioStreamProcessed(AudioStream stream);                
RLAPI void PlayAudioStream(AudioStream stream);                       
RLAPI void PauseAudioStream(AudioStream stream);                      
RLAPI void ResumeAudioStream(AudioStream stream);                     
RLAPI bool IsAudioStreamPlaying(AudioStream stream);                  
RLAPI void StopAudioStream(AudioStream stream);                       
RLAPI void SetAudioStreamVolume(AudioStream stream, float volume);    
RLAPI void SetAudioStreamPitch(AudioStream stream, float pitch);      
RLAPI void SetAudioStreamBufferSizeDefault(int size);                 