src/ref/RayLib.pas


  // Load audio stream (to stream raw audio pcm data)
  LoadAudioStream: function(SampleRate: Cardinal; SampleSize: Cardinal; Channels: Cardinal): TAudioStream; cdecl;
  // Unload audio stream and free memory
  UnloadAudioStream: procedure(stream: TAudioStream); cdecl;
  // Update audio stream buffers with data
  UpdateAudioStream: procedure(Stream: TAudioStream; const Data: Pointer; FrameCount: Integer); cdecl;
  // Check if any audio stream buffers requires refill
  IsAudioStreamProcessed: function(Stream: TAudioStream): Boolean; cdecl;
  // Play audio stream
  PlayAudioStream: procedure(stream: TAudioStream); cdecl;
  // Pause audio stream
  PauseAudioStream: procedure(stream: TAudioStream); cdecl;
  // Resume audio stream
  ResumeAudioStream: procedure(stream: TAudioStream); cdecl;
  // Check if audio stream is playing
  IsAudioStreamPlaying: function(stream: TAudioStream): Boolean; cdecl;
  // Stop audio stream
  StopAudioStream: procedure(stream: TAudioStream); cdecl;
  // Set volume for audio stream (1.0 is max level)
  SetAudioStreamVolume: procedure(stream: TAudioStream; volume: Single); cdecl;
  // Set pitch for audio stream (1.0 is base level)
  SetAudioStreamPitch: procedure(stream: TAudioStream; pitch: Single); cdecl;
  // Default size for new audio streams
  SetAudioStreamBufferSizeDefault: procedure(size: Integer); cdecl;

//------------------------------------------------------------------------------------
// Network (Module: network)
//------------------------------------------------------------------------------------

// IN PROGRESS: Check rnet.h for reference

{*
  Load library dynamically, use RayLibrary.Load to load it
*}

type

  { TmncRayLib }

  TmncRayLib = class(TmnLibrary)
  public
  protected
    procedure Link; override;
  end;

var
  RayLibrary: TmncRayLib = nil;

function Vector2Of(X, Y: Single): TVector2;
function RectangleOf(X, Y, W, H: Single): TRectangle;

implementation

function Vector2Of(X, Y: Single): TVector2;
begin
  Result := TVector2.Create(X, Y);
end;

function RectangleOf(X, Y, W, H: Single): TRectangle;
begin
  Result := TRectangle.Create(X, Y, W, H);
end;

function TColorHelper.SetAlpha(AAlpha: Byte): TColor;
begin
  Result := Self;
  Result.RGBA.Alpha := AAlpha;
end;

{ TColor }

class operator TColor.Explicit(a: TRGBAColor): TColor;
begin
  Result.RGBA := a;
end;

class operator TColor.Explicit(a: Cardinal): TColor;
begin
  Result.Value := a;
end;

class operator TColor.Equal(a, b: TColor): Boolean;
begin
  Result := a.Value = b.Value;
end;

procedure TColor.SetRGB(AColor: TColor);
begin
  RGBA.Red := AColor.RGBA.Red;
  RGBA.Green := AColor.RGBA.Green;
  RGBA.Blue := AColor.RGBA.Blue;
end;

class operator TColor.Implicit(a: TRGBAColor): TColor;
begin
  Result.RGBA := a;
end;

class operator TColor.Implicit(a: Cardinal): TColor;
begin
  Result.Value := a;
end;

{ TRectangle }

constructor TRectangle.Create(AX, AY, AWidth, AHeight: Single);
begin
  X:= AX;
  Y:= AY;
  Width := AWidth;
  Height := AHeight;
end;

{ TColor }

function TRGBAColorHelper.ReplaceAlpha(AAlpha: Byte): TColor;
begin
  Result := Self;
  Result.RGBA.Alpha := AAlpha;
end;

function TRGBAColorHelper.ReplaceRGB(AColor: TColor): TColor;
begin
  Result := Self;
  Result.RGBA.Red := AColor.RGBA.Red;
  Result.RGBA.Green := AColor.RGBA.Green;
  Result.RGBA.Blue := AColor.RGBA.Blue;
end;

constructor TColorHelper.Create(ARed, AGreen, ABlue, AAlpha: Byte);
var
  aRGBAColor: TRGBAColor;
  aColor: TColor absolute aRGBAColor;
begin
  with aRGBAColor do
  begin
    Red := ARed;
    Green := AGreen;
    Blue := ABlue;
    Alpha := AAlpha;
  end;
  Self := aColor;
end;

constructor TColorHelper.Create(RGBAColor: TRGBAColor);
var
  aColor: TColor absolute RGBAColor;
begin
  Self := aColor;
end;

constructor TColorHelper.CreateRGBA(RGBA: Cardinal);
begin
  {$ifdef ENDIAN_LITTLE}
  Self := SwapEndian(RGBA);
  {$else}
  Self := RGBA; //TODO Swap it SwapEndian()
  {$endif}
end;

{ TVector2 }

constructor TVector2.Create(AX, AY: Single);
begin
  X := AX;
  Y := AY;
end;

constructor TVector2.Create(I: Int64);
begin
  Self := TVector2(i);
end;

constructor TVector3.Create(AX, AY, AZ: Single);
begin
  X := AX;
  Y := AY;
  Z := AZ;
end;

{ TmncRayLib }

procedure TmncRayLib.Link;
begin
  RaiseError := True; //Raise error of one of this functions not exists
  InitWindow := GetAddress('InitWindow');
  WindowShouldClose := GetAddress('WindowShouldClose');
  CloseWindow := GetAddress('CloseWindow');
  IsWindowReady := GetAddress('IsWindowReady');
  IsWindowFullscreen := GetAddress('IsWindowFullscreen');
  IsWindowHidden := GetAddress('IsWindowHidden');
  IsWindowMinimized := GetAddress('IsWindowMinimized');
  IsWindowMaximized := GetAddress('IsWindowMaximized');
  IsWindowResized := GetAddress('IsWindowResized');
  IsWindowState := GetAddress('IsWindowState');
  SetWindowState := GetAddress('SetWindowState');
  ClearWindowState := GetAddress('ClearWindowState');
  ToggleFullscreen := GetAddress('ToggleFullscreen');
  MaximizeWindow := GetAddress('MaximizeWindow');
  MinimizeWindow := GetAddress('MinimizeWindow');
  RestoreWindow := GetAddress('RestoreWindow');
  SetWindowIcon := GetAddress('SetWindowIcon');
  SetWindowTitle := GetAddress('SetWindowTitle');
  SetWindowPosition := GetAddress('SetWindowPosition');
  SetWindowMonitor := GetAddress('SetWindowMonitor');
  SetWindowMinSize := GetAddress('SetWindowMinSize');
  SetWindowSize := GetAddress('SetWindowSize');
  GetWindowHandle := GetAddress('GetWindowHandle');
  GetScreenWidth := GetAddress('GetScreenWidth');
  GetScreenHeight := GetAddress('GetScreenHeight');
  GetMonitorCount := GetAddress('GetMonitorCount');
  GetCurrentMonitor := GetAddress('GetCurrentMonitor');
  GetMonitorPosition := GetAddress('GetMonitorPosition');
  GetMonitorWidth := GetAddress('GetMonitorWidth');
  GetMonitorHeight := GetAddress('GetMonitorHeight');
  GetMonitorPhysicalWidth := GetAddress('GetMonitorPhysicalWidth');
  GetMonitorPhysicalHeight := GetAddress('GetMonitorPhysicalHeight');
  GetMonitorRefreshRate := GetAddress('GetMonitorRefreshRate');
  GetWindowPosition := GetAddress('GetWindowPosition');
  GetMonitorName := GetAddress('GetMonitorName');
  GetWindowScaleDPI := GetAddress('GetWindowScaleDPI');
  SetClipboardText := GetAddress('SetClipboardText');
  GetClipboardText := GetAddress('GetClipboardText');
  SwapScreenBuffer := GetAddress('SwapScreenBuffer');
  PollInputEvents := GetAddress('PollInputEvents');
  WaitTime := GetAddress('WaitTime');
  ShowCursor := GetAddress('ShowCursor');
  HideCursor := GetAddress('HideCursor');
  IsCursorHidden := GetAddress('IsCursorHidden');
  EnableCursor := GetAddress('EnableCursor');
  DisableCursor := GetAddress('DisableCursor');
  IsCursorOnScreen := GetAddress('IsCursorOnScreen');
  ClearBackground := GetAddress('ClearBackground');
  BeginDrawing := GetAddress('BeginDrawing');
  EndDrawing := GetAddress('EndDrawing');
  BeginMode2D := GetAddress('BeginMode2D');
  EndMode2D := GetAddress('EndMode2D');
  BeginMode3D := GetAddress('BeginMode3D');
  EndMode3D := GetAddress('EndMode3D');
  BeginTextureMode := GetAddress('BeginTextureMode');
  EndTextureMode := GetAddress('EndTextureMode');
  BeginShaderMode := GetAddress('BeginShaderMode');
  EndShaderMode := GetAddress('EndShaderMode');
  BeginBlendMode := GetAddress('BeginBlendMode');
  EndBlendMode := GetAddress('EndBlendMode');
  BeginScissorMode := GetAddress('BeginScissorMode');
  EndScissorMode := GetAddress('EndScissorMode');
  LoadVrStereoConfig := GetAddress('LoadVrStereoConfig');
  UnloadVrStereoConfig := GetAddress('UnloadVrStereoConfig');
  LoadShader := GetAddress('LoadShader');
  LoadShaderFromMemory := GetAddress('LoadShaderFromMemory');
  GetShaderLocation := GetAddress('GetShaderLocation');
  GetShaderLocationAttrib := GetAddress('GetShaderLocationAttrib');
  SetShaderValue := GetAddress('SetShaderValue');
  SetShaderValueV := GetAddress('SetShaderValueV');
  SetShaderValueMatrix := GetAddress('SetShaderValueMatrix');
  SetShaderValueTexture := GetAddress('SetShaderValueTexture');
  UnloadShader := GetAddress('UnloadShader');
  GetMouseRay := GetAddress('GetMouseRay');
  GetCameraMatrix := GetAddress('GetCameraMatrix');
  GetCameraMatrix2D := GetAddress('GetCameraMatrix2D');
  GetWorldToScreen := GetAddress('GetWorldToScreen');
  GetWorldToScreenEx := GetAddress('GetWorldToScreenEx');
  GetWorldToScreen2D := GetAddress('GetWorldToScreen2D');
  GetScreenToWorld2D := GetAddress('GetScreenToWorld2D');
  SetTargetFPS := GetAddress('SetTargetFPS');
  GetFPS := GetAddress('GetFPS');
  GetFrameTime := GetAddress('GetFrameTime');
  GetTime := GetAddress('GetTime');

  GetRandomValue := GetAddress('GetRandomValue');
  SetRandomSeed := GetAddress('SetRandomSeed');
  TakeScreenshot := GetAddress('TakeScreenshot');
  SetConfigFlags := GetAddress('SetConfigFlags');
  TraceLog := GetAddress('TraceLog');
  SetTraceLogLevel := GetAddress('SetTraceLogLevel');
  MemAlloc := GetAddress('MemAlloc');
  MemRealloc := GetAddress('MemRealloc');
  MemFree := GetAddress('MemFree');

  SetTraceLogCallback := GetAddress('SetTraceLogCallback');
  SetLoadFileDataCallback := GetAddress('SetLoadFileDataCallback');
  SetSaveFileDataCallback := GetAddress('SetSaveFileDataCallback');
  SetLoadFileTextCallback := GetAddress('SetLoadFileTextCallback');
  SetSaveFileTextCallback := GetAddress('SetSaveFileTextCallback');
